<resources>
    <string name="app_name">Chatter</string>
    <string name="login_Username">Username</string>
    <string name="login_Password">Password</string>
    <string name="login_btn">Login</string>
    <string name="contact_nickname">Contact\'s Nickname</string>
    <string name="write_message_here">Write messageForRoom here</string>
    <string name="self_message_example">This is an example of a messageForRoom by me</string>
    <string name="other_message_example">This is an example of a messageForRoom by you</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="app_mode">App Mode:</string>
    <string name="default_server">Default Server:</string>
    <string name="localhost_7506">localhost:7506</string>
    <string name="message_example">Message Example</string>
    <string name="_18_37">18:37</string>
    <string name="register_Username">Username</string>
    <string name="register_Password">Password</string>
    <string name="register_btn">Register</string>
    <string name="register_Verify_password">Verify Password</string>
    <string name="register_nickname">Nickname</string>
    <string name="login_Register_option">No Account Yet? Create an Account</string>
    <string name="register_Back_to_login">Already Registered? Go Back to Login</string>
    <string name="BaseURL">http://10.0.2.2:5267/api/</string>
</resources>