<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="7sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/appMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_mode"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="7sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/lightOrDarkSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/changeServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_server"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="7sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/localhost_7506" />
        </LinearLayout>

        <TextView
            android:id="@+id/settings_vertical_layout_filler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="50"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>